# db

./: AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release-github.yml  release-rust.yml
crates/db-py/: Cargo.toml
crates/db-py/src/: lib.rs
crates/dkdc-db-bench/: Cargo.toml
crates/dkdc-db-bench/src/: main.rs
crates/dkdc-db-cli/: Cargo.toml
crates/dkdc-db-cli/src/: cli.rs  lib.rs  main.rs  repl.rs
crates/dkdc-db-client/: Cargo.toml
crates/dkdc-db-client/src/: cli.rs  lib.rs  main.rs  repl.rs
crates/dkdc-db-client/tests/: client_errors.rs
crates/dkdc-db-core/: Cargo.toml
crates/dkdc-db-core/benches/: benchmark.rs
crates/dkdc-db-core/src/: catalog.rs  config.rs  convert.rs  db.rs  error.rs  lib.rs  manager.rs  plan.rs  provider.rs  read.rs  router.rs  schema.rs  toml_config.rs  write.rs
crates/dkdc-db-core/tests/: concurrency.rs  config_bootstrap.rs  consistency.rs  convert.rs  critical_fixes.rs  ddl.rs  ddl_edge_cases.rs  edge_cases.rs  error_paths.rs  file_backed.rs  multi_db.rs  multi_db_scenarios.rs  roundtrip.rs  scale.rs  types.rs  validation.rs
crates/dkdc-db-server/: Cargo.toml
crates/dkdc-db-server/src/: api.rs  lib.rs  ui.rs
crates/dkdc-db-server/tests/: client_server.rs  error_responses.rs
py/dkdc_db/: __init__.py  _core.pyi
tests/: conftest.py  test_db.py
