[workspace]

[package]
name = "dkdc-db-py"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Cody <cody@dkdc.io>"]
description = "Python bindings for dkdc-db"
license = "MIT"
repository = "https://github.com/dkdc-io/db"
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dkdc-db-client = { version = "0.3", path = "../dkdc-db-client" }
dkdc-db-cli = { version = "0.3", path = "../dkdc-db-cli" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
