[package]
name = "dkdc-db-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Cody <cody@dkdc.io>"]
description = "CLI for dkdc-db: bundles client + server into one binary"
license = "MIT"
repository = "https://github.com/dkdc-io/db"

[lib]
name = "dkdc_db_cli"
path = "src/lib.rs"

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
dkdc-db-client = { version = "0.1", path = "../dkdc-db-client", features = ["cli"] }
dkdc-db-server = { version = "0.1", path = "../dkdc-db-server" }
dkdc-db-core = { version = "0.1", path = "../dkdc-db-core" }
dkdc-home = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1"
dkdc-sh = "0.1"
reqwest = { version = "0.12", default-features = false }
