[package]
name = "dkdc-db-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Cody <cody@dkdc.io>"]
description = "HTAP embedded database: libSQL writes + DataFusion reads"
license = "MIT"
repository = "https://github.com/dkdc-io/dkdc-db"

[dependencies]
dkdc-home = { path = "../../../dkdc-home/crates/dkdc-home" }
libsql = { version = "0.9", default-features = false, features = ["core", "replication"] }
datafusion = "53"
arrow = { version = "58", features = ["prettyprint"] }
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
rand = "0.9"

[[bench]]
name = "benchmark"
harness = false
