[package]
name = "dkdc-db-core"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Cody <cody@dkdc.io>"]
description = "HTAP database: turso writes + DataFusion reads"
license = "MIT"
repository = "https://github.com/dkdc-io/db"

[dependencies]
dkdc-home = "0.1"
turso = "0.5"
datafusion = "53"
arrow = "58"
tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
rand = "0.9"

[[bench]]
name = "benchmark"
harness = false
